--- a/Mask Detection .ipynb
+++ b/Mask Detection .ipynb
@@ -4,19 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Submission by Aravind Harinarayanan\n",
+    "\n",
+    "### I have used OpenCV and CNN to develop a model to detect facemasks. I have modified upon the existing model and has used CNN and deeplearning as an extra addition to Ml models to increase the precision and accuracy. After Researching on several journals and repositories about Image segmentation, I found out that OpenCV provides the best platform for face recogniton and I have used it hence. Additionally CNN models are the best in terms of accuracy and precision and has hence used the same.\n",
     " \n",
-    "# DATA PRE-PROCESSING  "
+    " \n",
+    "# DATA PRE-PROCESSING   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cv2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcv2\u001b[39;00m\u001b[38;5;241m,\u001b[39m\u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      3\u001b[0m data_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124maravi\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDownloads\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mFaceMaskDetector\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      4\u001b[0m categories\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39mlistdir(data_path)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cv2'"
+     ]
+    }
+   ],
    "source": [
     "import cv2,os\n",
     "\n",
-    "data_path=r'C:\\Users\\rishi\\Desktop\\Mask'\n",
+    "data_path=r'C:\\Users\\aravi\\Downloads\\FaceMaskDetector'\n",
     "categories=os.listdir(data_path)\n",
     "labels=[i for i in range(len(categories))]\n",
     "\n",
@@ -301,7 +317,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
